<resources>
    <string name="app_name">Gallery</string>
    <string name="gallery">Gallery</string>
    <string name="select_color">Select Color</string>
    <string name="emoji_master">¯\\_(ツ)_/¯</string>
    <string name="camera">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="hide">Hide</string>
    <string name="rename_photo_action">Rename photo</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="videos">Video</string>
    <string name="images">Images</string>
    <string name="sort_menu_title">Sort</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="date_taken">Date Taken</string>
    <string name="rename_error">Unable to rename this file</string>
    <string name="size">Size</string>
    <string name="numeric">As number</string>
    <string name="ascending">Ascending</string>
    <string name="select_all">Select All</string>
    <string name="clear_selected">Clear Selected</string>
    <string name="share">Share</string>
    <string name="rotate">Rotate</string>
    <string name="rotate_right_90">Rotate right 90°</string>
    <string name="rotate_left_90">Rotate left 90°</string>
    <string name="rotate_180">Rotate 180°</string>
    <string name="use_as">Use as</string>
    <string name="edit">Edit</string>
    <string name="rename">Rename</string>
    <string name="details">Details</string>
    <string name="print">Print</string>
    <string name="show_more">Show More</string>
    <string name="set_cover">Set as album Cover</string>
    <string name="new_folder">New Folder</string>
    <string name="delete_album_message">Are you sure you want to delete this album?</string>
    <string name="delete_photo_message">Are you sure you want to delete this media?</string>
    <string name="video_player">Video Player</string>
    <string name="media">Media</string>
    <string name="files">Files</string>
    <string name="send_to">Send to</string>
    <string name="of">%1$d of %2$d</string>
    <string name="palette">Palette</string>
    <string name="color">Color</string>
    <string name="copy_clipboard">Copied to clipboard</string>
    <string name="collage">Collage</string>
    <string name="done">Done!</string>
    <string name="there_is_nothing_to_show">There\'s nothing to show</string>
    <string name="nothing_changed">Nothing changed</string>
    <string name="print_error">Unable to print the picture</string>
    <string name="settings">Settings</string>
    <string name="theme">Theme</string>
    <string name="dark">Dark</string>
    <string name="path">Path</string>
    <string name="type">Type</string>
    <string name="resolution">Resolution</string>
    <string name="exif">EXIF</string>
    <string name="orientation">Orientation</string>
    <string name="location">Location</string>
    <string name="local_folder">Local Folders</string>
    <string name="all_media">All Media</string>
    <string name="secure_vault">Secure Vault</string>
    <string name="error_drm_unsupported_scheme">This device does not support the required DRM scheme</string>
    <string name="error_drm_unknown">An unknown DRM error occurred</string>
    <string name="storage_permission_denied">Permission to access storage was denied! We\'re not able to get your media!</string>
    <string name="camera_permission_denied">Permission to access camera was denied!\n We\'re not able to get your vault snooped person!</string>
    <string name="error_querying_decoders">Unable to query device decoders</string>
    <string name="got_permission_wr_sdcard">Obtained permission to write on the SD-Card.</string>
    <string name="internal_storage">Internal Storage</string>
    <string name="extrnal_storage">External Storage</string>
    <string name="error_occured_open_media">An error occurred while opening this media.</string>
    <string name="error_thumbnail">Unable to find a thumbnail for the album.</string>
    <string name="no_app_to_perform">Unable to find an app to perform this action.</string>
    <string name="start_slide_show">Start Slideshow</string>
    <string name="stop_slide_show">Stop Slideshow</string>
    <string name="waring_share_multiple_file_types">There may be problems sharing multiple file types.</string>
    <string name="toolbar_selection_count" translatable="false">%1$d of %2$d</string>
    <string name="delete_bottom_sheet_title">Cleaning up memories…</string>
    <string name="app_version">version 1.1</string>
    <string name="photo_editor_dialog_color_picker">Color Picker</string>
    <string name="photo_editor_press_color_to_apply">Press on Color to apply</string>
    <string name="waring_out_of_memory">Not enough memory. Please remove images or your program will be crashed.!!!</string>
    <string name="change">Change</string>
    <string name="photo_editor_share_image">Share Image</string>
    <string name="photo_editor_ok">OK</string>
    <string name="photo_editor_cancel">Cancel</string>
    <string name="photo_editor_app_name">Photo Editor</string>
    <string name="photo_library">Photo Gallery</string>
    <string name="photo_editor_square">Square</string>
    <string name="fit">Fit</string>
    <string name="select">Select</string>
    <string name="alter_background">Background Photo</string>
    <string name="background_color">Background Color</string>
    <string name="please_select_photo">Please select %d photo(s)</string>
    <string name="please_select_photo_without_counting">Please select photo(s)</string>
    <string name="you_need_photo">You only need %d photo(s)</string>
    <string name="guide_list_view_settings">Swipe to left on list view to get more actions</string>
    <string name="default_font">Default Font</string>
    <string name="permission_guide">You need to allow Photo Collage Grid Frame app to access the following permissions to use this app:</string>
    <string name="permission_denied_and_guide_to_setting">Permission denied! Please enable permission to perform any editing operation</string>
    <string name="permission_write_ex_storage">WRITE_EXTERNAL_STORAGE</string>
    <string name="Add">Add</string>
    <string name="layout_ration">Layout Ration</string>
    <string name="golden_ratio">Golden Ratio</string>
    <string name="select_ratio">Select Ratio</string>
    <string name="creating">Creating...</string>
    <string name="app_not_found">App not found</string>
    <string name="default_backgrounds">Default Backgrounds</string>
    <string name="default_stickers">Default Stickers</string>
    <string name="gallery_albums">Gallery Albums</string>
    <string name="warning_uninstall_default_package">You can not remove default packages</string>
    <string name="photo_editor_confirm_uninstall">Are you sure you want to uninstall this package?</string>
    <string name="album_image">Album Images</string>
    <string name="photo_editor_internal_storage">Internal storage</string>
    <string name="photo_editor_waring_out_of_memory">Not enough memory. Please remove images or your program will be crashed.!!!</string>
    <string name="txt_share">Share</string>
    <string name="txt_rate_us">Rate us</string>
    <string name="txt_about_us">About Us</string>
    <string name="txt_report">Report</string>
    <string name="share_using">Share using</string>
    <string name="txt_app_share_info">I have made this creative photo using GalleryApp on https://play.google.com/store/apps/details?id=com.photogallery.photography</string>
    <string name="txt_delete_message">Do you want to delete this photo?</string>
    <string name="txt_no">No</string>
    <string name="txt_yes">Yes</string>
    <string name="txt_file_delete_successfully">File Deleted Successfully</string>
    <string name="txt_shareMessage">Mange your media using Gallery on https://play.google.com/store/apps/details?id=com.photogallery.photography</string>
    <string name="txt_share_with">Share with</string>
    <string name="mainEmail">xyz@gmail.com</string>
    <string name="txt_customer_support">Support</string>
    <string name="txtPleaseWait">Please wait…</string>
    <string-array name="mainOptionArr">
        <item>@string/txtCropRotate</item>
        <item>@string/txtText</item>
        <item>@string/txtSticker</item>
        <item>@string/txtBrush</item>
        <item>@string/txtFilters</item>
        <item>@string/txtAdjust</item>
    </string-array>
    <string-array name="adjustOptionArr">
        <item>@string/txtBrightness</item>
        <item>@string/txtContrast</item>
        <item>@string/txtSharpness</item>
        <item>@string/txtSaturation</item>
        <item>@string/txtBlur</item>
        <item>@string/txtGamma</item>
        <item>@string/txtSepia</item>
        <item>@string/txtVignette</item>
    </string-array>
    <string-array name="textFontNameArr">
        <item>font</item>
        <item>font1</item>
        <item>font2</item>
        <item>font3</item>
        <item>font4</item>
        <item>font5</item>
        <item>font6</item>
        <item>font7</item>
        <item>font8</item>
        <item>font9</item>
        <item>font10</item>
        <item>font11</item>
        <item>font12</item>
        <item>font13</item>
        <item>font14</item>
        <item>font15</item>
        <item>font16</item>
        <item>font17</item>
        <item>font18</item>
        <item>font19</item>
    </string-array>
    <string name="txt_collage">Collage</string>
    <string name="text_recover_your_pass">Recover Password ?</string>
    <string name="text_recover_pass_msg">Are you sure you want to recover your password?</string>
    <string name="text_no">No</string>
    <string name="text_yes">Yes</string>
    <string name="move_to_vault">Move to vault</string>
    <string name="download_wa_status_menu_title">Download status</string>
    <string name="by_day">By day</string>
    <string name="by_month">By month</string>
    <string name="by_year">By year</string>
    <string name="duplicate_photo">Duplicate photos</string>
    <string name="NO">No</string>
    <string name="exceptions">Exceptions</string>
    <string name="ok">Ok</string>
    <string name="yes">yes</string>
    <string name="duplicate_photos">Duplicate Photos</string>
    <string name="cancel_selection">Cancel Selection</string>
    <string name="txt_duplicate_photo_warning_text1">Do you want to find duplicate photos again? Click on Rescan button.</string>
    <string name="txt_duplicate_photo_warning_text2">It will take some time.</string>
    <string name="txt_rescan">Rescan</string>
    <string name="app_name_new">Gallery</string>
    <string name="policy">Policy</string>
</resources>