<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/DialogMainLayout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl_title"
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:layout_marginTop="@dimen/margin_10">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:padding="6.0sp"
                android:text="@string/text_recover_your_pass"
                android:textColor="@color/black"
                android:textSize="18.0sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <TextView
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/big_spacing"
            android:layout_marginRight="@dimen/big_spacing"
            android:text="@string/text_recover_pass_msg"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize_14" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_20"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btnNo"
                style="@style/DialogButton"
                android:text="@string/text_no" />

            <TextView
                android:id="@+id/btnYes"
                style="@style/DialogButton"
                android:text="@string/text_yes" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>
