<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/DialogMainLayout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl_title"
            android:layout_width="fill_parent"
            android:layout_height="50.0dip">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center_vertical"
                android:padding="6.0sp"
                android:text="@string/duplicate_photos"
                android:textColor="@color/black"
                android:textSize="18.0sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tvLastScanningDateTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/big_spacing"
            android:layout_marginTop="@dimen/medium_spacing"
            android:layout_marginRight="@dimen/big_spacing"
            android:text="Last scanning : xx-xx-xxxx"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize_14" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/big_spacing"
            android:layout_marginTop="@dimen/medium_spacing"
            android:layout_marginRight="@dimen/big_spacing"
            android:text="@string/txt_duplicate_photo_warning_text1"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize_16"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/big_spacing"
            android:layout_marginTop="@dimen/medium_spacing"
            android:layout_marginRight="@dimen/big_spacing"
            android:text="@string/txt_duplicate_photo_warning_text2"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize_14" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_20"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btnCancel"
                style="@style/DialogButton"
                android:text="@string/cancel" />

            <TextView
                android:id="@+id/btnContinue"
                style="@style/DialogButton"
                android:text="@string/txt_rescan" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>
