<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/DialogMainLayout">

    <LinearLayout
        android:id="@+id/ll_total_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1.0">

        <RelativeLayout
            android:id="@+id/rl_title"
            android:layout_width="fill_parent"
            android:layout_height="50.0dip">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:padding="6.0sp"
                android:text="@string/exceptions"
                android:textColor="@color/black"
                android:textSize="18.0sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvMsg"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingLeft="10.0sp"
                android:paddingRight="10.0sp"
                android:text="@string/app_name_new"
                android:textColor="@color/black_new"
                android:textSize="15.0sp"
                android:textStyle="normal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="@dimen/margin_20"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvNo"
                style="@style/DialogButton"
                android:text="@string/NO" />

            <TextView
                android:id="@+id/tvYes"
                style="@style/DialogButton"
                android:text="@string/yes" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>